--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-mongodb : "mongodb+srv://preethiusha007:hvvhoiyI9veeJSVN@cluster0.cadjnlq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+
+
+MONGO_URI=mongodb+srv://preethi:preethi123@cluster0.csk7ao8.mongodb.net/?appName=Cluster0
+
+JWT_SECRET=yourSuperSecretKey123
+
+
